# cpp-application-template

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md  cmake-format.py  cmake-format.yaml  conanfile.txt
.github/workflows/: clang-format.yml  cmake-format.yml  main.yml
apps/: CMakeLists.txt
cmake/: conan.cmake  projectConfig.cmake.in  run-conan.cmake  warnings.cmake
src/: CMakeLists.txt  main.cpp  unit_tests.cpp
src/cpppt/: dummy.cpp  dummy.hpp  dummy.test.cpp
tests/: CMakeLists.txt
tools/conan/: build_tools  cmake  ninja
tools/travis-ci/: build.ps1  build.sh
